2003-04-23  Mark Page  <mpagenva@aol.com>

	* nsd/log.c (NsTclLogObjCmd): (bug fix) Tweeked previous fix to
	suppress trailing space on output.

2003-04-22  Nathan Folkman <shmooved@aol.com>

        * nsd/log.c: (bug fix) Fixed bug causing first two string
        args of "ns_log" to be improperly concatendated.

2003-04-16  Mark Page  <mpagenva@aol.com>

	* nsd/modload.c (NsLoadModules): (bug) Failed parsing the explicit
	initialization specification properly.

2003-04-10  Mark Page  <mpagenva@aol.com>

	* TAG aolserver_v4_r0_beta_5
	
2003-04-07  Mark Page  <mpagenva@aol.com>

	* nsd/tclthread.c (NsTclThread): ensure that the server has
	completed it's initializtion prior to initiating TclEval.
	* nsd/nsmain.c (Ns_WaitForStartup): add dirty-read of the
	conf.started flag.

2003-04-04  Mark Page  <mpagenva@aol.com>

	* nsd/tclinit.c:
	* nsd/tclcmds.c: Moved interp tracing functionality into ns_ictl
	api as one of it's subfunctions, removing the
	ns_register_interptrace api previously created.

2003-04-03  Mark Page  <mpagenva@aol.com>

	* nsd/tclinit.c:
	* nsd/tclcmds.c: Provide tcl api that exposes Ns_TclInitInterps
	and Ns_TclRegisterTrace.  ns_register_interptrace.

2003-03-30  Scott S. Goodwin  <scott@scottg.net>

	* include/ns.h:
          nsd/driver.c:
          nssock/nssock.c:
          nsssl/nsssl.c: Modified Ns_DriverInit. Instead of passing all args
          as parameters to Ns_DriverInit, a comm module must now create an
          Ns_DriverInitData structure and populate it with appropriate values
          (see include/ns.h) and pass that in the call to Ns_DriverInit. The
          Ns_DriverInitData structure is versioned so that we can extend it
          later without affecting other modules.

2003-03-28  Mark Page  <mpagenva@aol.com>

	* nsd/tclhttp.c: (bug) Fix uninitialized hdrs var, was causing segfault.

2003-03-21  Mark Page  <mpagenva@aol.com>

        * TAG aolserver_v4_r0_beta_4

2003-03-19  Mark Page  <mpagenva@aol.com>
